force-app/main/default/objects/KnoxApprover__c/KnoxApprover__c.object-meta.xml
<CustomObject>
    <label>Knox Approver</label>
    <nameField>
        <label>Knox Approver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Knox Approver</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>