force-app/main/default/objects/KnoxApprover__c/fields/actPrssDt__c.field-meta.xml
<CustomField>
    <fullName>actPrssDt__c</fullName>
    <label>actPrssDt</label>
    <type>DateTime</type>
</CustomField>