force-app/main/default/objects/KnoxApprover__c/fields/BoCode__c.field-meta.xml
<CustomField>
    <fullName>BoCode__c</fullName>
    <label>Bo Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>