force-app/main/default/objects/KnoxApprover__c/fields/docArvDt__c.field-meta.xml
<CustomField>
    <fullName>docArvDt__c</fullName>
    <label>docArvDt</label>
    <type>DateTime</type>
</CustomField>