force-app/main/default/objects/KnoxApprover__c/fields/docOpenDt__c.field-meta.xml
<CustomField>
    <fullName>docOpenDt__c</fullName>
    <label>docOpenDt</label>
    <type>DateTime</type>
</CustomField>