force-app/main/default/objects/KnoxApprover__c/fields/IsGetApprovalLine__c.field-meta.xml
<CustomField>
    <fullName>IsGetApprovalLine__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>IF 수신된 결재선 정보</inlineHelpText>
    <label>Is Get Approval Line</label>
    <type>Checkbox</type>
</CustomField>