force-app/main/default/objects/KnoxApprover__c/fields/KnoxApproval__c.field-meta.xml
<CustomField>
    <fullName>KnoxApproval__c</fullName>
    <label>Knox Approval</label>
    <referenceTo>KnoxApproval__c</referenceTo>
    <relationshipLabel>Knox Approver</relationshipLabel>
    <relationshipName>Knox_Approver</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>