force-app/main/default/objects/KnoxApprover__c/fields/OBJECTKEY__c.field-meta.xml
<CustomField>
    <fullName>OBJECTKEY__c</fullName>
    <label>OBJECTKEY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>