force-app/main/default/objects/KnoxApprover__c/fields/Opinion__c.field-meta.xml
<CustomField>
    <fullName>Opinion__c</fullName>
    <label>Opinion</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>