force-app/main/default/objects/KnoxApprover__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>미결</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>결재</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>반려</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>전결</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>자동결재</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>자동반려</label>
            </value>
            <value>
                <fullName>-1</fullName>
                <isActive>false</isActive>
                <label>-1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>